# pico-uart-bridge

./: .gitignore  led_test.py  main.py  main_debug.py  main_en.py  main_jp1.py  main_simple.py  main_simple_en.py  selftest.py
jp1_firmware/: BUILD.md  CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
wiring/: minimal.txt  pilot_ftdi6pin.txt
